SERVER-31290 Race in SessionCatalogMigrationDestination can cause it to miss some oplog

Make sure to call _getNextSessionMods at least once after transitioning to "committing" state. Also stop sending oplog for new writes that doesn't is not part of any transaction.